--- a/resources/language/resource.language.it_IT/strings.po
+++ b/resources/language/resource.language.it_IT/strings.po
@@ -8,33 +8,33 @@ msgstr ""
 "Project-Id-Version: XBMC-Addons\n"
 "Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
 "POT-Creation-Date: 2014-10-26 17:05+0000\n"
-"PO-Revision-Date: 2016-02-18 03:49+0100\n"
-"Language-Team: Guilouz\n"
-"Language: fr\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"Last-Translator: \n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 msgctxt "Addon Summary"
 msgid "AutoCompletion provider"
-msgstr "Fournisseur de la saisie automatique"
+msgstr "Provider di AutoCompletamento"
 
 msgctxt "Addon Description"
 msgid ""
 "This script offers various possibilities to display online content inside "
 "Needs skin support for most functions."
-msgstr "Ce script vous propose différentes possibilités pour afficher le contenu en ligne. La plupart des fonctions nécessitent d'être supportées par le thème."
+msgstr ""
 
 msgctxt "#32001"
 msgid "Autocompletion"
-msgstr "Saisie automatique"
+msgstr "Autocompletamento"
 
 msgctxt "#32002"
 msgid "Autocompletion language"
-msgstr "Langue de saisie semi-automatique"
+msgstr "Linguaggio di autocompletamento"
 
 msgctxt "#32003"
 msgid "Autocompletion provider"
-msgstr "Fournisseur de la saisie automatique"
+msgstr "Provider di autocompletamento"
